# simple-game

./: Cargo.toml  build.rs
.github/workflows/: clippy.yml  test.yml
examples/: bevy_example.rs  simple.rs
src/: bevy.rs  graphics.rs  lib.rs  util.rs
src/graphics/: debug_drawer.rs  fullscreen_quad.rs  image.rs  lines.rs  lines2d.rs  lines3.rs  mod.rs  screen.rs  text.rs  textured_quad.rs
src/graphics/shaders/: debug.wgsl  debug_lines.wgsl  debug_lines.wgsl.spv  instanced_shape.wgsl  instanced_shape.wgsl.spv
src/graphics/shaders/compiled/: debug_lines.spv  fullscreen_quad.spv  glyph.spv  instanced_shape.spv
src/graphics/shaders/wgsl/: debug_lines.wgsl  fullscreen_quad.wgsl  glyph.wgsl  image.wgsl  instanced_lines.wgsl  instanced_shape.wgsl  round_line_strip.wgsl  round_line_strip3.wgsl
