[package]
name = "simple-game"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] } # Tracks the version in bevy
png-decoder = "0.1"
pollster = "0.3"
wgpu = "22"
winit = {version = "0.29", features = ["rwh_05"]} # TODO(bschwind) - Remove rwh_05 when wgpu updates to raw-window-handle v0.6

cosmic-text = "0.12"
etagere = "0.2"
fontdb = "0.16"
lru = "0.12"
sys-locale = "0.3"

thiserror = "1"

[build-dependencies]
naga = { version = "0.14", features = ["validate", "wgsl-in"] }
