[package]
name = "simple-game"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.4"
glam = { version = "0.30", features = ["bytemuck"] }
png-decoder = "0.1"
pollster = "0.4"
rect_packer = "0.2"
wgpu = "24"
winit = "0.30"

thiserror = "1"

[build-dependencies]
naga = { version = "24", features = ["wgsl-in"] }
